feat: edit ebl
fix: get party name -> id

fix: reset api.yaml

fix: follow openapi type

fix: draft ebl party extract error

fix: simplify status judgement

fix: format

fix: next party id logic error

fix: review issue

fix: review issue

fix: amend ebl should not display delete button

fix: amend logic

feat: ebl row description

fix: merge conflict
